@@ -164,7 +164,7 @@ echo $(date) " | START" >>$TESTLOG
 # clean out logs from previous run
 rm -f grouper/logs/*.log >>$TESTLOG 2>&1
 
-echo "Executing edu.internet2.middleware.grouper.AllTests"
+echo "Executing edu.internet2.middleware.grouper.AllTests" >>$TESTLOG 2>&1
 $JAVA -classpath "$CP" \
   -Dgrouper.allow.db.changes=true \
   -Dgrouper.home=./ \
@@ -176,6 +176,31 @@ $JAVA -classpath "$CP" \
 exit_code=$?
 
 echo $(date) "CI test finished (exit code $exit_code)" >>$TESTLOG
+
+
+# Run pspng as a separate set of tests
+$MVN -f grouper-misc/grouper-pspng dependency:copy-dependencies >>$BUILDLOG 2>&1
+exit_code=$?
+if [ $exit_code -ne 0 ]; then
+  echo "Maven pspng dependency:copy-dependencies failed (exit $exit_code)" >>$TESTLOG
+  exit 1
+fi
+
+CP=$(compgen -G "grouper-misc/grouper-pspng/target/grouper-pspng-[0-9].[0-9].[0-9]*.jar" | grep -v -- '-sources.jar' | tr '\n' ':' | sed -e 's/::/:/;s/:$//'):$CP
+
+echo "Executing edu.internet2.middleware.grouper.AllTests" >>$TESTLOG 2>&1
+echo "CP=$CP" >>$TESTLOG 2>&1
+$JAVA -classpath "$CP" \
+  -Dgrouper.allow.db.changes=true \
+  -Dgrouper.home=grouper-misc/grouper-pspng \
+  -XX:MaxPermSize=300m -Xms80m -Xmx640m \
+  edu.internet2.middleware.grouper.AllTests pspng.AllPspngTests \
+  -noprompt \
+  >>$TESTLOG 2>&1
+
+exit_code=$?
+
+echo $(date) "CI test (PSPNG) finished (exit code $exit_code)" >>$TESTLOG
 
 
 GROUPER_ATTACH=
